# tsk-auth-service

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/workflows/: dispatch_update.yml
auth_app/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py  0002_customuser_special_role.py  0003_rename_special_role_customuser_role.py  0004_alter_customuser_role.py
tests/: test_auth.py  test_permission.py  test_token_refresh.py
tsk_auth_service/: asgi.py  settings.py  urls.py  wsgi.py
